2005-04-24  Eric Anholt <eta@lclark.edu>

	* kaffe/kaffevm/exception.c,
	kaffe/kaffevm/locks.c,
	kaffe/kaffevm/locks.h,
	kaffe/kaffevm/string.c,
	kaffe/kaffevm/intrp/checks.h,
	kaffe/kaffevm/intrp/icode.h,
	kaffe/kaffevm/jni/jni-base.c,
	kaffe/kaffevm/jni/jni-helpers.c,
	kaffe/kaffevm/jni/jni.c
	kaffe/kaffevm/jni/jni_funcs.h
	kaffe/kaffevm/kaffe-gc/gc-mem.c:
	Fixed a few warnings.

2005-04-24  Dalibor Topic  <robilad@kaffe.org>

	* config/i386/netbsd1/md.h:
	Include <sys/signal.h> for sigcontext on NetBSD CVS head.

	* kaffe/kaffevm/systems/unix-pthreads/signal.c:
	Include jit-md.h to make sure that exceptionFrame is defined.

2005-04-24  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/systems/unix-pthreads/signal.c 
	(nullException, floatingException): Removed prototypes 
	that were confusing the compiler on NetBSD CVS HEAD.
	(jthread_initexceptions): Moved further to the back 
	to make sure it picks up the declarations of 
	nullException and floatingException.
	
2005-04-24  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath:

	2005-04-23  Tom Tromey  <tromey@redhat.com>

        * javax/swing/text/StyleConstants.java (StyleConstants): Now
        package-private.

2005-04-24  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath:

	2005-04-23  Mark Wielaard  <mark@klomp.org>

        * java/net/URL.java (URL(URL,String,URLStreamHandler)): Add spec
        to MalformedURLException.

2005-04-24  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath:

	2005-04-23  Michael Koch  <konqueror@gmx.de>

        * java/net/ServerSocket.java
        (getChannel): Improved javadoc comment.

2005-04-24  Dalibor Topic  <robilad@kaffe.org>

        * include/Makefile.am:
	Don't generate JNI headers for removed files.

        * libraries/clib/native/Makefile.am:
	Removed character set conversion sources.

        * libraries/clib/nio/Makefile.am:
	Added iconv linking flags.

        * libraries/javalib/Makefile.am.in: